Changed .isBlank() to .isEmpty() in UManagerSingletonTest
Changed the use of .isBlank() to .isEmpty() for a test case in
UserManagerSingletonTest.